Use relative units of measure, fix spacing

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -6,20 +6,23 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+html {
+    font-size: 62.5%;  /* (10/16) * 100*/
+}
 
-* {
+*, *::after, *::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    font-size: 16px;
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
+    box-sizing: border-box;
 }
 
 .header {
@@ -37,12 +40,12 @@ body {
 
 .logo-box {
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
 
 .logo {
-    height: 35px;
+    height: 3.5rem;
 }
 
 .text-box {
@@ -61,9 +64,9 @@ body {
 
 .heading-primary-main {
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
     animation-name: moveInLeft;
     animation-duration: 1.2s;
     animation-timing-function: linear;
@@ -71,9 +74,9 @@ body {
 
 .heading-primary-sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17px;
+    letter-spacing: 1.7rem;
     animation-name: moveInRight;
     animation-duration: 1.2s;
     animation-timing-function: linear;
@@ -82,12 +85,12 @@ body {
 @keyframes moveInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(-10rem);
     }
 
     80% {
         opacity: 0.7;
-        transform: translateX(10px);
+        transform: translateX(1rem);
     }
     100% {
         opacity: 1;
@@ -98,12 +101,12 @@ body {
 @keyframes moveInRight {
     0% {
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
 
     80% {
         opacity: 0.7;
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
     100% {
         opacity: 1;
@@ -114,7 +117,7 @@ body {
 @keyframes moveInBottom {
     0% {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(3rem);
     }
 
     100% {
@@ -129,23 +132,24 @@ body {
     display: inline-block;
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
-    border-radius: 50px;
-    margin-top: 60px;
+    padding: 1.5rem 4rem;
+    border-radius: 5rem;
+    margin-top: 6rem;
     transition: all 0.3s;
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
+    font-size: 1.6rem;
 }
 
 .btn:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    transform: translateY(-.5rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 
 }
 
 .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    transform: translateY(-1rem);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 .btn-white {
@@ -159,17 +163,18 @@ body {
     z-index: -1;
     height: 100%;
     width: 100%;
-    border-radius: 50px;
+    border-radius: 5rem;
     position: absolute;
     top: 0;
     left: 0;
     transition: all 0.4s;
 }
-.btn:hover::after{
+
+.btn:hover::after {
     transform: scale(1.4);
     opacity: 0;
 }
 
-.btn-white::after{
+.btn-white::after {
     background-color: white;
 }
